<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/settings"
        android:orderInCategory="100"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/keep_screen_on"
        android:checkable="true"
        android:orderInCategory="100"
        android:title="@string/keep_screen_on"
        app:showAsAction="never" />

    <item
        android:id="@+id/fork_on_github"
        android:orderInCategory="100"
        android:title="@string/fork_me_on_github"
        app:showAsAction="never" />

    <item
        android:id="@+id/about"
        android:orderInCategory="100"
        android:title="@string/about"
        app:showAsAction="never" />

</menu>
